--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  background-image: radial-gradient(ellipse at top left, #7755dd, #3311dd);
+  background-image: radial-gradient(ellipse at top left, #7f50e4, #4c05d0);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,5 +19,5 @@
 body {
   margin: 0;
   text-align: center;
-  color: #e7ddf7;
+  color: #e6ddf9;
 }
